# Winning-Ticket-Hypothesis-Study

./: .gitignore  README.md  Untitled-1.ipynb  pyproject.toml
BERT/: configs_bert.txt  create_ensemble_tickets.py  few_shot_configs.txt  few_shot_training.py  first draft.ipynb  lottery_ticket_bert.py  requirements.txt  run_fewshot.sh  run_lth_bert.sh  testing_notebook.ipynb
CNN/: check_python_gpu.bsub  configs.txt  data.py  main.py  models.py  plotter.py  pruning.py  run_experiments.sh  trainer.py
CNN/results/: plot_Conv-4-DROPOUTpng  results_Conv-2_random_reinit_seed1.csv  results_Conv-2_random_reinit_seed1_dropout.csv  results_Conv-2_random_reinit_seed2.csv  results_Conv-2_random_reinit_seed2_dropout.csv  results_Conv-2_random_reinit_seed3.csv  results_Conv-2_random_reinit_seed3_dropout.csv  results_Conv-2_random_reinit_seed4.csv  results_Conv-2_random_reinit_seed4_dropout.csv  results_Conv-2_random_reinit_seed5.csv  results_Conv-2_random_reinit_seed5_dropout.csv  results_Conv-2_winning_ticket_seed1_dropout.csv  results_Conv-2_winning_ticket_seed2.csv  results_Conv-2_winning_ticket_seed2_dropout.csv  results_Conv-2_winning_ticket_seed3.csv  results_Conv-2_winning_ticket_seed3_dropout.csv  results_Conv-2_winning_ticket_seed4.csv  results_Conv-2_winning_ticket_seed4_dropout.csv  results_Conv-2_winning_ticket_seed5.csv  results_Conv-2_winning_ticket_seed5_dropout.csv  results_Conv-4_random_reinit_seed1.csv  results_Conv-4_random_reinit_seed1_dropout.csv  results_Conv-4_random_reinit_seed2.csv  results_Conv-4_random_reinit_seed2_dropout.csv  results_Conv-4_random_reinit_seed3.csv  results_Conv-4_random_reinit_seed3_dropout.csv  results_Conv-4_random_reinit_seed4.csv  results_Conv-4_random_reinit_seed4_dropout.csv  results_Conv-4_random_reinit_seed5.csv  results_Conv-4_random_reinit_seed5_dropout.csv  results_Conv-4_winning_ticket_seed1.csv  results_Conv-4_winning_ticket_seed1_dropout.csv  results_Conv-4_winning_ticket_seed2.csv  results_Conv-4_winning_ticket_seed2_dropout.csv  results_Conv-4_winning_ticket_seed3.csv  results_Conv-4_winning_ticket_seed3_dropout.csv  results_Conv-4_winning_ticket_seed4.csv  results_Conv-4_winning_ticket_seed4_dropout.csv  results_Conv-4_winning_ticket_seed5.csv  results_Conv-4_winning_ticket_seed5_dropout.csv  (+18 more)
Lenet-300-100/: LeNet.py  configs.txt  eval.py  load_dataset.py  main.py  plot_results.py  pruning.py  run_experiments.py  run_experiments.sh  train.py
Lenet-300-100/logs/: dense_training_log.csv  pruned_80.0.csv  pruned_89.5.csv  pruned_92.8.csv  pruned_94.6.csv  pruned_95.6.csv
VGG/: main.py  prunning.py  train.py  vgg.py
utils/: eval.py  prunning.py
